--- a/src/app/list-users/list-users.component.html
+++ b/src/app/list-users/list-users.component.html
@@ -1,1 +1,5 @@
-<p>list-users works!</p>
+<li>
+  <img class="user-prev-photo" src="{{user.avatar_url}}" alt="{{user.login}}_photo">
+  <p class="user-prev-name">{{user.login}}</p>
+</li>
+
